--- a/Periodico/src/app/Componentes/adverts/adverts.component.html
+++ b/Periodico/src/app/Componentes/adverts/adverts.component.html
@@ -1,33 +1,23 @@
-<div class="container-fluid">
-  <div class="row">
-    <div class="col-md-3">
-      <div class="card">
-        <img src="../../../assets/anuncio1.PNG" class="card-img-top" alt="Anuncio1">
-      </div>
-    </div>
-
-    <div class="col-md-3">
-      <div class="card">
-        <img src="../../../assets/anuncio3.PNG" class="card-img-top" alt="Imagen de la tarjeta 2">
-      </div>
-    </div>
-
-    <div class="col-md-3">
-      <div class="card">
-        <img src="../../../assets/anuncio4.PNG" class="card-img-top" alt="Imagen de la tarjeta 3">
-      </div>
-    </div>
-
-    <div class="col-md-3">
-      <div class="card">
-        <img src="../../../assets/anuncio.PNG" class="card-img-top" alt="Imagen de la tarjeta 4">
-      </div>
-    </div>
-  </div>
-</div>
-
-
-
-
-     
-        
+<div class="col-lg-4">
+  <div class="widget-blocks">
+    <div class="row">
+      <div class="col-lg-12 col-md-6">
+        <div class="widget">
+          <h2 class="section-title mb-3">Recommended</h2>
+          <div class="widget-body">
+            <div class="widget-list">
+              <article class="card mb-4">
+                <div class="card-image">
+                  <div class="post-info"> <span class="text-uppercase">1 minutes read</span>
+                  </div>
+                  <img loading="lazy" decoding="async" src="images/post/post-9.jpg" alt="Post Thumbnail" class="w-100">
+                </div>
+                <div class="card-body px-0 pb-1">
+                  <h3><a class="post-title post-title-sm"
+                      href="article.html">Portugal and France Now
+                      Allow Unvaccinated Tourists</a></h3>
+                  <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor …</p>
+                  <div class="content"> <a class="read-more-btn" href="article.html">Read Full Article</a>
+                  </div>
+                </div>
+              </article>
