--- a/Periodico/src/app/app.component.html
+++ b/Periodico/src/app/app.component.html
@@ -1,4 +1,11 @@
 
 <app-top-of-page></app-top-of-page>
-<app-adverts></app-adverts>
-<app-content></app-content>
+<body>
+    <app-adverts></app-adverts>
+    <app-content></app-content>
+    <app-articuls></app-articuls>
+    <app-nuevo></app-nuevo> 
+</body>
+
+<app-piedepagina></app-piedepagina>
+
