--- a/Periodico/src/app/Componentes/adverts/adverts.component.css
+++ b/Periodico/src/app/Componentes/adverts/adverts.component.css
@@ -1,11 +1,6 @@
-.card {
-  height: 80%; 
-  display: flex;
-  align-items: center; 
+.widget{
+  background-color: rgb(60, 60, 52);
 }
-
-.card-img-top {
-  width: 100%; 
-  height: 100%;
-  object-fit: cover;
+.row{
+  background-color: aquamarine;
 }
