--- a/Periodico/src/app/Componentes/content/content.component.css
+++ b/Periodico/src/app/Componentes/content/content.component.css
@@ -1,12 +1,6 @@
-.container {
-    width: 100%; 
-    height: 400px; 
-    margin: 5% auto
-  }
-  
-  .container img {
-    width: 100%;
-    height: 400px; 
-    object-fit: cover; 
-  }
- 
+main{
+    background-color: brown;
+}
+.no-gutters-lg{
+    background-color: blueviolet;
+}
