--- a/Periodico/src/app/Componentes/top-of-page/top-of-page.component.html
+++ b/Periodico/src/app/Componentes/top-of-page/top-of-page.component.html
@@ -1,24 +1,36 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
-    <div class="container-fluid">
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="logo">
-        <img src="../../../assets/Captura.PNG" alt="">
+
+<header class="navigation">
+  <div class="container">
+    <nav class="navbar navbar-expand-lg navbar-light px-0">
+      <a class="navbar-brand order-1 py-0" href="index.html">
+        <img loading="prelaod" decoding="async" class="img-fluid" src="images/logo.png" alt="Reporter Hugo">
+      </a>
+      <div class="navbar-actions order-3 ml-0 ml-md-4">
+        <button aria-label="navbar toggler" class="navbar-toggler border-0" type="button" data-toggle="collapse"
+          data-target="#navigation"> <span class="navbar-toggler-icon"></span>
+        </button>
       </div>
-      <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+      <form action="#!" class="search order-lg-3 order-md-2 order-3 ml-auto">
+        <input id="search-query" name="s" type="search" placeholder="Search..." autocomplete="off">
+      </form>
+      <div class="collapse navbar-collapse text-center order-lg-2 order-4" id="navigation">
+        <ul class="navbar-nav mx-auto mt-3 mt-lg-0">
+          <li class="nav-item"> <a class="nav-link" href="about.html">About Me</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Noticias</a>
+          <li class="nav-item dropdown"> <a class="nav-link dropdown-toggle" href="#" role="button"
+              data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Articles
+            </a>
+            <div class="dropdown-menu"> <a class="dropdown-item" href="travel.html">Travel</a>
+              <a class="dropdown-item" href="travel.html">Lifestyle</a>
+              <a class="dropdown-item" href="travel.html">Cruises</a>
+            </div>
+          </li>
+          <li class="nav-item"> <a class="nav-link" href="contact.html">Contact</a>
           </li>
         </ul>
-        <form class="d-flex" role="buscar ">
-          <input class="form-control me-2" type="buscar" placeholder="buscar" aria-label="Search">
-          <button  type="button" class="btn btn-outline-primary" type="buscar">buscar </button>
-        </form>
       </div>
-    </div>
-  </nav>
+    </nav>
+  </div>
+  
+</header>
